--- a/portal/chat.html
+++ b/portal/chat.html
@@ -58,7 +58,7 @@
 
     .app {
       height: 95vh; /* iOS 키보드 대응용, 거의 전체 화면 */
-      padding: calc(8px + env(safe-area-inset-top)) 12px
+      padding: env(safe-area-inset-top) 12px
                calc(12px + env(safe-area-inset-bottom));
       display: flex;
       flex-direction: column;
