--- a/portal/chat.html
+++ b/portal/chat.html
@@ -1,4 +1,11 @@
 <!doctype html>
+<!--
+  chat.html
+  - 시공간 스튜디오 포털 메인 화면
+  - 프론트 로직: portal/app.js
+  - 백엔드: app.py (/api/chat, /api/history)
+  - 상단 API 사용량 바/퍼센트 값은 현재는 시각적 장식용이며, 실제 사용량과는 연동되지 않는다.
+-->
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
@@ -77,8 +84,6 @@
       backdrop-filter: blur(16px) saturate(140%);
       -webkit-backdrop-filter: blur(16px) saturate(140%);
       box-shadow: 0 18px 40px rgba(5, 7, 6, 0.55);
-      max-height: 160px;
-      overflow: hidden;
       transition: max-height 0.25s ease, opacity 0.25s ease;
     }
 
@@ -492,6 +497,30 @@
       padding: 0 2px;
     }
 
+    .upload-profile-row {
+      font-size: 10px;
+      color: var(--text-soft);
+      padding: 0 2px 2px;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .upload-profile-row label {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .upload-profile-row select {
+      font-size: 10px;
+      border-radius: 999px;
+      padding: 2px 8px;
+      border: none;
+      outline: none;
+      background: rgba(244, 240, 234, 0.9);
+      color: var(--text-main);
+    }
+
     .composer-row {
       display: flex;
       align-items: center;
@@ -659,13 +688,22 @@
     <!-- 입력 영역 -->
     <section class="composer">
       <input type="file" id="fileInput" multiple style="display:none" />
-      <!-- 첨부 미리보기 -->
+      <!-- 첨부 미리보기 (현재는 로컬 미리보기 전용, 실제 업로드는 app.js TODO 참고) -->
       <div class="attach-strip" id="attachStrip">
         <div class="attach-strip-inner" id="attachStripInner">
           <!-- JS로 채워짐 -->
         </div>
       </div>
 
+      <div class="upload-profile-row">
+        <label>
+          저장 위치
+          <select id="uploadProfileSelect">
+            <option value="local_default">기본 (로컬)</option>
+            <option value="gdrive_main">구글 드라이브 (메인)</option>
+          </select>
+        </label>
+      </div>
 
       <div class="composer-row">
         <button class="attach-btn" type="button" id="attachBtn">＋</button>
@@ -695,16 +733,37 @@
     const fileInput = document.getElementById("fileInput");
     const messagesEl = document.getElementById("messages");
     const pullIndicator = document.getElementById("pullIndicator");
+    const uploadProfileSelect = document.getElementById("uploadProfileSelect");
 
     const TYPING_ROW_ID = "assistant-typing";
 
     const STORAGE_KEY = "director_chat_messages_v2";
+    const UPLOAD_PROFILE_KEY = "director_upload_profile";
+    let uploadProfile = "local_default";
     let chatHistory = [];
     let pendingAttachments = [];
     const INITIAL_HISTORY_BATCH = 40;
     const HISTORY_PAGE_SIZE = 40;
     let visibleStartIndex = 0;
     let isLoadingOlder = false;
+
+    // 업로드 프로필 초기화 (localStorage에서 불러오기)
+    if (uploadProfileSelect) {
+      const savedProfile = localStorage.getItem(UPLOAD_PROFILE_KEY);
+      if (savedProfile) {
+        uploadProfile = savedProfile;
+      }
+      uploadProfileSelect.value = uploadProfile;
+      uploadProfileSelect.addEventListener("change", (e) => {
+        const value = e.target.value || "local_default";
+        uploadProfile = value;
+        try {
+          localStorage.setItem(UPLOAD_PROFILE_KEY, uploadProfile);
+        } catch (_) {
+          // ignore
+        }
+      });
+    }
 
     async function fetchServerHistory(limit = 200) {
       try {
@@ -1214,6 +1273,15 @@
           },
           body: JSON.stringify({
             messages: [{ role: "user", content: contentToSend }],
+            attachments: pendingAttachments.map((att) => {
+              const f = att.file;
+              return {
+                name: (f && f.name) || "첨부파일",
+                type: (f && f.type) || null,
+                size: typeof f?.size === "number" ? f.size : null,
+              };
+            }),
+            upload_profile: uploadProfile,
           }),
         });
 
